# backstop

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  README.md  SECURITY.md  UAT_FINDINGS.md  install.sh  llms.txt  plan.md  pyproject.toml  task.yaml  task_openai.yaml
.agents/: AGENTS.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: benchmark_report.yml  bug_report.yml  feature_request.yml  provider_compatibility.yml
.github/workflows/: ci.yml
benchmarks/: local_overhead.py
docs/: architecture.md  benchmark-results-2026-07-04.md  benchmark-results-2026-07-20.md  benchmarks.md  build-plan-10x-roadmap-2026-07-20.md  compatibility.md  competitive-benchmark-2026-07-20.md  concurrency.md  deep-research-10x-better-2026-07-20.md  firecrawl-mcp.md  install.md  threat-model.md
docs/research/: backstop-deep-research-2026-07-18.md  in-process-guardrails-landscape.md
examples/: anthropic_async.py  anthropic_sync.py  background_priority.py  basic.py  budget_blocking_demo.py  fastapi_tenants.py  openai_async.py  openai_sync.py  prometheus_metrics.py  wedge_basic.py  wedge_openai.py
observability/: prometheus-alerts.yml
observability/grafana/: backstop-dashboard.json
plans/: backstop-unicorn-coss-2026-07-04.assumptions.md  backstop-unicorn-coss-2026-07-04.metrics.md  backstop-unicorn-coss-2026-07-04.phase-0-trust-proof.md  backstop-unicorn-coss-2026-07-04.phase-1-enterprise-pilots.md  backstop-unicorn-coss-2026-07-04.phase-2-control-plane-mvp.md  backstop-unicorn-coss-2026-07-04.phase-3-platform-expansion.md  backstop-unicorn-coss-2026-07-04.plan.md  backstop-unicorn-coss-2026-07-04.tracking-log.md
src/backstop/: __init__.py  admission.py  agent_guard.py  aimd.py  audit.py  budget.py  (+28 more)
tests/: test_budget.py  test_cache_gzip_replay.py  test_cache_semantic.py  test_config.py  test_deep_research.py  test_extract.py  test_fallback_chain.py  test_ledger.py  test_real_anthropic.py  test_real_openai.py  test_retry_aimd_circuit.py  test_streaming_budget.py  test_transport.py  test_wrapper.py
(+18 files in other folders)
