[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "backstop"
version = "0.1.0"
description = "In-process OpenAI SDK backpressure, budgets, retries, circuit breaking, and metrics."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Backstop Contributors" }]
dependencies = [
  "httpx>=0.27",
  "openai>=1.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
metrics = ["prometheus-client>=0.20"]
anthropic = ["anthropic>=0.40"]
tokenizers = ["tiktoken>=0.7"]
test = [
  "anyio>=4",
  "pytest>=8",
  "pytest-cov>=5",
  "anthropic>=0.40",
]

[project.scripts]
backstop = "backstop.cli:main"
wedge = "wedge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/backstop", "src/wedge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
markers = [
  "real_openai: opt-in tests that call the real OpenAI API",
  "real_anthropic: opt-in tests that call the real Anthropic API",
]

[tool.ruff]
line-length = 100
target-version = "py310"
